Bug 149124 - PPTX: Grouped shapes connected with connector and ungroup it the connector won't be attached to shapes
Summary: PPTX: Grouped shapes connected with connector and ungroup it the connector wo...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.4.0
Keywords: filter:pptx
Depends on:
Blocks: Shape-ODF-OOXML-export
  Show dependency treegraph
 
Reported: 2022-05-17 09:58 UTC by NISZ LibreOffice Team
Modified: 2022-06-30 08:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test file save as odf format (14.91 KB, application/vnd.oasis.opendocument.presentation)
2022-05-17 09:59 UTC, NISZ LibreOffice Team
Details
Test file save as pptx format (23.12 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-05-17 10:00 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-05-17 09:58:53 UTC
Description:
We create two shapes and connect these shapes with a connector, assigning and grouping the shapes, after that we save to pptx format.
When we open again this file and ungrouping the group of shapes, the connector does not stay connect between the shapes.

Steps to Reproduce:
1. Create a new Impress presentation.
2. Create two shapes.
3. Connect the two shapes with connector.
4. Assign the shapes and group them (Ctrl+Shift+G)
5. Save as pptx.
6. Open the file.
7. Click on the group and ungroup it. (Ctrl+Alt+Shift+G)

Actual Results:
The connector does not attached to the shapes after ungrouping.

Expected Results:
The connector stay attached to the shapes after ungrouping.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 2d93fd2631b4f8ceca1068c1779963424ff90e80
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-05-17 09:59:46 UTC
Created attachment 180149 [details]
Test file save as odf format
Comment 2 NISZ LibreOffice Team 2022-05-17 10:00:43 UTC
Created attachment 180150 [details]
Test file save as pptx format
Comment 3 Commit Notification 2022-05-27 08:00:29 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/25e747ed39a3742d26c1128b6823679de279d5df

tdf#149124 PPTX import: fix broken connectors in grouped shapes

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-05-30 08:25:26 UTC
Verified in: 

Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 212cb61fb6adc05395b9f9afe0dacbd6594ae06b
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL