tdf#149124 PPTX import: fix broken connectors in grouped shapes

Previously connector lines of grouped shapes were detached
after the import losing the original layout (without
ungrouping and moving the shapes).

Change-Id: I660629d9d1c2cb0ab68de275ca5406f4c48e9145